[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Tomotools"
description = "Scripts to make cryo-electron tomography a bit easier."
readme = "README.md"
version = "0.4.7"

requires-python = ">=3.12"
license = {text = "None so far"}
authors = [
  {email = "moritz.wachsmuth@bioquant.uni-heidelberg.de", name = "Moritz Wachsmuth-Melm"},
  {email = "wimmer@stanford.edu", name = "Benedikt Wimmer"},
]
dependencies = [
    "Click",
    "numpy",
    "pandas",
    "mrcfile",
    "matplotlib",
]

[tool.setuptools]
packages = ["tomotools", "tomotools.commands", "tomotools.utils"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
tomotools = "tomotools:tomotools"

[project.urls]
homepage = "https://github.com/tomotools/tomotools"
repository = "https://github.com/tomotools/tomotools"
